cambio al index para hacer funcional el boton de mas informacion y vista de informacion

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 <p class="descripcion">Peter Parker es desenmascarado y por tanto no es capaz de separar su vida normal de los enormes riesgos que conlleva ser un súper héroe. Cuando pide ayuda a Doctor Strange, los riesgos pasan a ser aún más peligrosos, obligándole a descubrir lo que realmente significa ser Spider-Man.
                 </p>
                 <button role="button" class="boton" ><i class="fa-solid fa-circle-play"></i>Ver</button>
-                <button role="button" class="boton"><i class="fa-solid fa-circle-info"></i>Mas información</button>
+                <a href="vistas/informacionPelicula.html" class="boton"><i class="fa-solid fa-circle-info"></i>Más información</a>
+            </div>
             </div>
 
         </div>
