--- a/vistas/informacionPelicula.html
+++ b/vistas/informacionPelicula.html
@@ -14,10 +14,10 @@
             <h2 class="logotipo">IS MOVIES</h2>
             <nav>
                 <a href="../index.html" >inicio</a>
-                <a href="vistas/peliculas.html">Peliculas</a>
-                <a href="vistas/series.html">Series</a>
-                <a href="vistas/populares.html">Popular</a>
-                <a href="vistas/recientes.html">Mas recientes</a>
+                <a href="peliculas.html">Peliculas</a>
+                <a href="series.html">Series</a>
+                <a href="populares.html">Popular</a>
+                <a href="recientes.html">Mas recientes</a>
             </nav>
         </div>
     </header>
