Cambie los titulos de las categorias

--- a/vistas/peliculas.html
+++ b/vistas/peliculas.html
@@ -93,7 +93,7 @@
 
                <!-- Segundo Carrusel -->
                <div class="contenedor-titulo-controles">
-                <h3 class="tituloP">DRAMA</h3>
+                <h3 class="tituloP">AMOR</h3>
                 <div class="indicadores-segundo"></div>
             </div>
 
@@ -149,7 +149,7 @@
             
             <!-- Tercer Carrusel -->
             <div class="contenedor-titulo-controles">
-                <h3 class="tituloP">DRAMA</h3>
+                <h3 class="tituloP">ACCION</h3>
                 <div class="indicadores-tercero"></div>
             </div>
             
