Se conectaron todas las vistas a la api y se hicieron sus respectivos js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="contenedor">
             <h2 class="logotipo">IS MOVIES</h2>
             <nav>
-                <a href="#" class="activo">inicio</a>
+                <a href="" class="activo">inicio</a>
                 <a href="vistas/peliculas.html">Peliculas</a>
                 <a href="vistas/series.html">Series</a>
                 <a href="vistas/populares.html">Popular</a>
